--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
       <section class="items-section">
         <div class="div-styles item-1">
           <img
-            src="../images/donut1.png"
+            src="donut1.png"
             alt="pic-of-lemon-zest"
             width="200px"
             height="200px"
@@ -113,7 +113,7 @@
         </div>
         <div class="div-styles item-2">
           <img
-            src="../images/donut2.png"
+            src="donut2.png"
             alt="pic-of-Cheery-pie"
             width="200px"
             height="200px"
@@ -128,7 +128,7 @@
         </div>
         <div class="div-styles item-3">
           <img
-            src="../images/donut3.png"
+            src="donut3.png"
             alt="pic-of-Cheery-pie"
             width="200px"
             height="200px"
