added-new-files

--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
       <section class="items-section">
         <div class="div-styles item-1">
           <img
-            src="donut1.png"
+            src="./images/donut1.png"
             alt="pic-of-lemon-zest"
             width="200px"
             height="200px"
@@ -113,7 +113,7 @@
         </div>
         <div class="div-styles item-2">
           <img
-            src="donut2.png"
+            src="./images/donut2.png"
             alt="pic-of-Cheery-pie"
             width="200px"
             height="200px"
@@ -128,7 +128,7 @@
         </div>
         <div class="div-styles item-3">
           <img
-            src="donut3.png"
+            src="./images/donut3.png"
             alt="pic-of-Cheery-pie"
             width="200px"
             height="200px"
@@ -143,7 +143,7 @@
         </div>
         <div class="div-styles item-4">
           <img
-            src="../images/donut4.png"
+            src="./images/donut4.png"
             alt="pic-of-Cheery-pie"
             width="200px"
             height="200px"
@@ -158,7 +158,7 @@
         </div>
         <div class="div-styles item-5">
           <img
-            src="../images/donut5.png"
+            src="./images/donut5.png"
             alt="pic-of-Cheery-pie"
             width="200px"
             height="200px"
@@ -173,7 +173,7 @@
         </div>
         <div class="div-styles item-6">
           <img
-            src="../images/donut6.png"
+            src="./images/donut6.png"
             alt="pic-of-Cheery-pie"
             width="200px"
             height="200px"
@@ -188,7 +188,7 @@
         </div>
         <div class="div-styles item-7">
           <img
-            src="../images/donut1.png"
+            src="./images/donut1.png"
             alt="pic-of-Cheery-pie"
             width="200px"
             height="200px"
@@ -203,7 +203,7 @@
         </div>
         <div class="div-styles item-8">
           <img
-            src="../images/donut2.png"
+            src="./images/donut2.png"
             alt="pic-of-Cheery-pie"
             width="200px"
             height="200px"
